<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgUsuario"
        android:layout_above="@+id/txtNombreUsuario"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY"
        android:src="@drawable/mariocharacter" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtNombreUsuario"
        android:hint="@string/strNom"
        android:layout_above="@+id/txtApellidos"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtApellidos"
        android:hint="@string/strApe"
        android:layout_above="@+id/txtTelefono"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txtTelefono"
        android:hint="@string/strTel"
        android:layout_above="@+id/txtCorreo"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtCorreo"
        android:hint="@string/strCorreo"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/txtUsername"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtUsername"
        android:hint="@string/strUsua"
        android:inputType="text"
        android:layout_above="@+id/txtContra"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtContra"
        android:hint="@string/strContra"
        android:layout_above="@+id/btnGuardarUsuario"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strGuardar"
        android:id="@+id/btnGuardarUsuario"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:fontFamily="trebuchet ms"
        android:textColor="#f9fffa"
        android:background="#6db1e2"
        android:layout_gravity="center_horizontal|bottom"
        />

</RelativeLayout>