<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.blcr.vj.Main2Activity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:src="@mipmap/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/txtUsuarioLogin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtUsuarioLogin"
        android:gravity="center"
        android:hint="@string/strUsua"
        android:layout_above="@+id/txtContraLogin"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtContraLogin"
        android:gravity="center"
        android:hint="@string/strContra"
        android:layout_above="@+id/chkbncs"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strncs"
        android:id="@+id/chkbncs"
        android:layout_gravity="center_horizontal"
        android:checked="false"
        android:layout_above="@+id/btnEntrar"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:text="@string/strEntrar"
        android:id="@+id/btnEntrar"
        android:layout_marginBottom="85dp"
        android:layout_above="@+id/btnRegistrarse"
        android:layout_alignStart="@+id/btnRegistrarse"
        android:fontFamily="trebuchet ms"
        android:textColor="#f9fffa"
        android:background="#6db1e2"
        android:layout_gravity="center_horizontal|bottom"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/strress"
        android:id="@+id/textView"
        android:layout_above="@+id/btnRegistrarse"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:text="@string/strReg"
        android:id="@+id/btnRegistrarse"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="trebuchet ms"
        android:textColor="#f9fffa"
        android:background="#6db1e2"
        android:layout_gravity="center_horizontal|bottom"
        />

</RelativeLayout>