<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="168dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/idCompra"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="156dp"
            android:layout_height="152dp"
            android:id="@+id/imgMisVJ"
            android:src="@drawable/add" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/lblNombreD" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/lblPrecioD" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/lblConsolaD" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/lblContactoD" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnCompimg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="postStatusUpdate"
                    android:text="@string/share"
                    android:layout_gravity="center_horizontal"
                    android:background="#5d59ff"
                    android:textColor="#ffffff"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <Button
                    android:id="@+id/btnComp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="postStatusUpdate"
                    android:text="@string/share"
                    android:layout_gravity="top|right"
                    android:background="#5d59ff"
                    android:textColor="#ffffff"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="125dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/lblDescripcionD" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:weightSum="1">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/map" tools:context=".MapsActivity"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_below="@+id/txEntrega" />
    </LinearLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strSeparar"
            android:id="@+id/btnComprarD"
            android:fontFamily="trebuchet ms"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/btnBorrar" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strBorrar"
                android:id="@+id/btnBorrar"
            android:fontFamily="trebuchet ms"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</LinearLayout>